v2 API updates.
Remove webapp module.
Remove old provider modules.
Move ldaptive-netty and protocol into core.
Remove TLSSocketFactory and ThreadLocalTLSSocketFactory classes, no longer needed.
Set default values for connect and response timeout.
Add autoReconnect property to ConnectionConfig.
Use StringBuilder instead of String.format
Rename io package to transcode.
Move Aggregate authentication classes into separate files.