@@ -10,12 +10,8 @@
   <parent>
     <groupId>org.ldaptive</groupId>
     <artifactId>ldaptive-parent</artifactId>
-    <version>1.2.5-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
   </parent>
-
-  <properties>
-    <ldapTestProvider>org.ldaptive.provider.jndi.JndiProvider</ldapTestProvider>
-  </properties>
 
   <dependencies>
     <dependency>
@@ -31,11 +27,6 @@
     <dependency>
       <groupId>org.ldaptive</groupId>
       <artifactId>ldaptive-beans</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>commons-cli</groupId>
-      <artifactId>commons-cli</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -93,7 +84,6 @@
         <includes>
           <include>**/*.config</include>
           <include>**/*.ldif</include>
-          <include>**/*.dsmlv1</include>
           <include>**/*.xml</include>
           <include>**/*.properties</include>
           <include>**/*.credential</include>
@@ -174,7 +164,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <argLine>-Dorg.ldaptive.provider=${ldapTestProvider} -Xms1g -Xmx2g</argLine>
+          <argLine>-Xms1g -Xmx2g</argLine>
           <suiteXmlFiles>
             <suiteXmlFile>${project.build.directory}/test-classes/testng.xml</suiteXmlFile>
           </suiteXmlFiles>
@@ -236,9 +226,13 @@
           <debug>true</debug>
           <showDeprecation>true</showDeprecation>
           <showWarnings>true</showWarnings>
-          <compilerArgument>-Xlint:unchecked</compilerArgument>
-          <source>1.8</source>
-          <target>1.8</target>
+          <compilerArgs>
+            <arg>-Xlint:unchecked</arg>
+            <arg>--add-exports</arg>
+            <arg>java.base/sun.security.util=ALL-UNNAMED</arg>
+          </compilerArgs>
+          <source>11</source>
+          <target>11</target>
         </configuration>
         <executions>
           <execution>
@@ -258,58 +252,4 @@
       </plugin>
     </plugins>
   </build>
-  <profiles>
-    <profile>
-      <id>apache</id>
-      <dependencies>
-        <dependency>
-          <groupId>org.ldaptive</groupId>
-          <artifactId>ldaptive-apache</artifactId>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-      <properties>
-        <ldapTestProvider>org.ldaptive.provider.apache.ApacheLdapProvider</ldapTestProvider>
-      </properties>
-    </profile>
-    <profile>
-      <id>jldap</id>
-      <dependencies>
-        <dependency>
-          <groupId>org.ldaptive</groupId>
-          <artifactId>ldaptive-jldap</artifactId>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-      <properties>
-        <ldapTestProvider>org.ldaptive.provider.jldap.JLdapProvider</ldapTestProvider>
-      </properties>
-    </profile>
-    <profile>
-      <id>opendj</id>
-      <dependencies>
-        <dependency>
-          <groupId>org.ldaptive</groupId>
-          <artifactId>ldaptive-opendj</artifactId>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-      <properties>
-        <ldapTestProvider>org.ldaptive.provider.opendj.OpenDJProvider</ldapTestProvider>
-      </properties>
-    </profile>
-    <profile>
-      <id>unboundid</id>
-      <dependencies>
-        <dependency>
-          <groupId>org.ldaptive</groupId>
-          <artifactId>ldaptive-unboundid</artifactId>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-      <properties>
-        <ldapTestProvider>org.ldaptive.provider.unboundid.UnboundIDProvider</ldapTestProvider>
-      </properties>
-    </profile>
-  </profiles>
 </project>
